--- a/CSS_Files/index_style.css
+++ b/CSS_Files/index_style.css
@@ -35,7 +35,7 @@ body {
 
 .banner {
     position: relative;
-    background-image: url('./images/index_images/banner/banner-homepage.jpg');
+    background-image: url('../images/index_images/banner/banner-homepage.jpg');
     background-size: cover;
     background-position: center;
     height: 400px;
@@ -43,7 +43,6 @@ body {
     align-items: center;
     justify-content: center;
 }
-
 
 .banner::after {
     content: '';
